[project]
name = "poizon-file-research"
version = "0.1.0"
description = "Poizon(중고거래 플랫폼) 데이터 수집 및 리서치 도구"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pymysql>=1.0.0",
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.0",
]
